--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.6"
+    "@astrojs/react": "^4.1.4",
+    "@astrojs/svelte": "^7.0.3",
+    "@astrojs/tailwind": "^5.1.4",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.1.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "svelte": "^5.17.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
